# multi-agent-orchestration

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_import.py
config/: proxies.example.json  seed_groups.example.txt  tg_account_platforms.md
dashboard/: backend.py  index.html  run.sh  server.py
dashboard/static/: app.js  index.html  style.css
docs/: ARCHITECTURE.md
scripts/: account_status.py  batch_setup.py  bulk_discover_groups.py  check_account.py  import_accounts.py  import_groups.py  import_tgstat_csv.py  join_group.py  login_account.py  manage_account.py  migrate_age_field.py  nurture_account.py  register_account.py  reset_account_age.py  send_message.py  setup_avatars.py  setup_db.py  smart_onboard.py  status.py  sync_persona_bios.py  update_role.py
src/: main.py
src/agents/: __init__.py  base.py
src/agents/bot/: __init__.py  official_bot.py
src/agents/content/: __init__.py  agent.py
src/agents/events/: __init__.py  agent.py
src/agents/executor/: __init__.py  agent.py  coordinated_chat.py
src/agents/infiltrator/: __init__.py  agent.py  coordinated_chat.py
src/agents/scout/: __init__.py  (+3 more)
src/ai/: __init__.py  anti_spam.py  content_gen.py  persona.py  template_engine.py
src/brain/: __init__.py  age_policy.py  analytics.py  circuit_breaker.py  risk_engine.py  scheduler.py  warmup_policy.py
src/config/: settings.py
src/models/: __init__.py  account.py  base.py  group.py  message.py  metrics.py  task.py
src/tg_clients/: __init__.py  bot_client.py  proxy_pool.py  user_client.py
(+2 files in other folders)
