[project]
name = "multi-agent-orchestration"
version = "2.0.0"
description = "Multi-agent orchestration system (Scout / Scheduler / Executor / Content / Risk)"
requires-python = ">=3.11"
dependencies = [
    # Telegram (TDLib loaded via ctypes - requires libtdjson installed on system)
    "python-telegram-bot[webhooks]>=21.0",
    # AI
    "anthropic>=0.40",
    "openai>=1.50",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Redis / Task Queue
    "redis>=5.0",
    "arq>=0.26",
    # HTTP
    "httpx>=0.27",
    "aiohttp>=3.10",
    # Utilities
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "datasketch>=1.6",  # MinHash for content similarity
    "schedule>=1.2",
    "tenacity>=9.0",
    # Proxy
    "python-socks[asyncio]>=2.5",
    "aiohttp-socks>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
